kube/api-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: derp-api-dep
  namespace: derp
spec:
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxUnavailable: 0
  #     maxSurge: 1
  replicas: 1
  selector:
    matchLabels:
      app: derp-api
  # pod below
  template:
    metadata:
      labels:
        app: derp-api
    spec:
      containers:
      - name: derp-api-container
        image: tjwalkr3/derp-raven-api:$BUILD_NUMBER
        ports:
        - containerPort: 8080
