kube/db-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: derp-db-dep
  namespace: derp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: derp-db
  # pod below
  template:
    metadata:
      labels:
        app: derp-db
    spec:
      volumes:
      - name: derp-db-data
        persistentVolumeClaim:
          claimName: derp-db-pvc
      - name: schema-init
        configMap:
          name: derp-init-sql
      containers:
      - name: derp-postgres
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: derp-db-data
        - mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: derp-db-init
          name: schema-init
        image: postgres:16
        ports:
        - containerPort: 5432
