kube/grafana-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: derp-grafana-dep
  namespace: derp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: derp-grafana
  # pod below
  template:
    metadata:
      labels:
        app: derp-grafana
    spec:
      volumes:
      - name: grafana-configs
        configMap:
          name: derp-grafana-config
      containers:
      - name: derp-grafana
        volumeMounts:
        - mountPath: /etc/grafana/provisioning/datasources/ds.yaml
          subPath: derp-config
          name: grafana-configs
        image: grafana/grafana:latest
        ports:
        - name: web-int
          containerPort: 3000
