kube/web-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: derp-web-dep
  namespace: derp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: derp-web
  # pod below
  template:
    metadata:
      labels:
        app: derp-web
    spec:
      containers:
      - name: derp-web-container
        image: tjwalkr3/derp-raven-web:2
        ports:
        - containerPort: 8080
