kube/zipkin-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: derp-zipkin-dep
  namespace: derp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: derp-zipkin
  # pod below
  template:
    metadata:
      labels:
        app: derp-zipkin
    spec:
      containers:
      - name: derp-zipkin
        image: ghcr.io/openzipkin/zipkin-slim:latest
        ports:
        - name: zipkin-traces
          containerPort: 9411
