kube/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: derp-api-svc
  namespace: derp
spec:
  selector:
    app: derp-api
  ports:
    - protocol: TCP
      port: 8080 # external port (doesn't have to be the same)
      targetPort: 8080
