kube/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: derp-grafana-svc
  namespace: derp
spec:
  selector:
    app: derp-grafana
  ports:
    - protocol: TCP
      port: 3000 # external port (doesn't have to be the same)
      targetPort: 3000
