kube/loki-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: derp-loki-svc
  namespace: derp
spec:
  selector:
    app: derp-loki
  ports:
    - protocol: TCP
      port: 3100 # external port (doesn't have to be the same)
      targetPort: 3100
