kube/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: derp-web-svc
  namespace: derp
spec:
  selector:
    app: derp-web
  ports:
    - protocol: TCP
      port: 80 # external port (doesn't have to be the same)
      targetPort: 80
    # The following adds session affinity
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
