kube/zipkin-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: derp-zipkin-svc
  namespace: derp
spec:
  selector:
    app: derp-zipkin
  ports:
    - protocol: TCP
      port: 9411 # external port (doesn't have to be the same)
      targetPort: 9411
      name: zipkin-traces
