kube/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: derp-api-ingress
  namespace: derp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.dragonbytes.org
      secretName: tls-dragonbytes
  rules:
    - host: api.dragonbytes.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: derp-api-svc
                port:
                  number: 8080
