kube/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: derp-prometheus-ingress
  namespace: derp
spec:
  rules:
  - host: prometheus.dragonbytes.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: derp-prometheus-svc
            port:
              number: 9090 # same as external ip set in service
