kube/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: derp-web-ingress
  namespace: derp
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - dragonbytes.org
      secretName: tls-dragonbytes
  rules:
    - host: dragonbytes.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: derp-web-svc
                port:
                  number: 80
